apps/demos/Demos/Pagination/Overview/jQuery/styles.css
body {
  padding: 0;
  margin: 0;
  background-color: var(--dx-color-main-bg);
  overflow-x: hidden;
  font-size: var(--dx-font-size);
  line-height: var(--dx-line-height);
  color: var(--dx-color-text);
}

.demo-container {
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container {
  min-width: 720px;
  width: 100%;
}

.employees {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
  min-height: 640px;
  padding-bottom: 24px;
}

.employees__card {
  width: 100%;
  max-height: 312px;
  align-self: stretch;
  overflow: hidden;
  border: var(--dx-border-width) solid var(--dx-color-border);
  border-radius: var(--dx-border-radius);
  background-color: var(--dx-component-color-bg);
}

.employees.employees--forth .employees__card {
  min-width: 250px;
  width: 390px;
  flex-basis: calc(50% - 10px);
}

.employees.employees--six .employees__card {
  flex-basis: calc(33.3% - 12.5px);
}

.employees__img-wrapper {
  height: 180px;
  position: relative;
  overflow: hidden;
  border-bottom: var(--dx-border-width) solid var(--dx-color-border);
  background-color: #fff;
}

.employees__img {
  display: block;
  height: 220px;
  position: absolute;
  content: "";
  left: 50%;
  top: 0;
  transform: translateX(-50%);
}

.employees__info {
  padding: 24px;
}

.employees__info-row {
  margin-bottom: 8px;
  text-wrap: nowrap;
}

.employees__info-label {
  display: inline-block;
  font-weight: 600;
  vertical-align: middle;
}

.employees.employees--forth .employees__info-label {
  width: 160px;
}

.employees.employees--six .employees__info-label {
  width: 80px;
}

.employees__info-value {
  display: inline-block;
  text-wrap: nowrap;
  text-overflow: ellipsis;
  vertical-align: middle;
  overflow: hidden;
  white-space:nowrap
}

.employees.employees--forth .employees__info-value {
  max-width: 180px;
}

.employees.employees--six .employees__info-value {
  max-width: 120px;
}

